<resources>
    <string name="app_name">Ciudad Nube</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_problems_viewer">ProblemsViewerActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_problems_list">ProblemsList</string>
    <string name="title_activity_problems_map">Map</string>
    <string name="title_activity_report_map">Map</string>
    <string name="google_maps_key">AIzaSyDHTAiif761O5nOGHK-Qriy4SufZM4kHFA</string>
    <string name="image_of_problem">Image of problem</string>
    <string name="add_image">Add image</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="description_hint">Short problem description</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="company_login">Company login</string>
    <string name="show_areas">Show areas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_for_description">Placeholder for description</string>
    <string name="missing_fields">Some fields are missing</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="missing_image">Please upload image</string>
</resources>
